# glinf

./: CMakeLists.txt  LICENSE  README.md  glinf.cpp
